# clipline

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: all.rs  bresenham_comparison.rs  comparison.rs  main.rs
examples/: line_1111.rs
src/: axis.rs  axis_aligned.rs  bidiagonal.rs  bresenham.rs  bresenham_case.rs  clip.rs  derive.rs  diagonal.rs  func.rs  iter.rs  kuzmin.rs  lib.rs  line_a.rs  line_b.rs  line_d.rs  macros.rs  math.rs  octant.rs  orthogonal.rs  rect.rs  symmetry.rs  util.rs  utils.rs
src/axis/: clip.rs  convert.rs
src/axis_aligned/: clip.rs  convert.rs
src/bresenham/: clip.rs  kuzmin.rs
src/clip/: axis.rs  bresenham_case.rs  diagonal.rs  kuzmin.rs  line_a.rs  line_b.rs  line_d.rs  point.rs  rect.rs  signed_axis.rs
src/diagonal/: clip.rs  convert.rs  kuzmin.rs
src/macros/: control_flow.rs  derive.rs  symmetry.rs
src/octant/: clip.rs  convert.rs
src/orthogonal/: clip.rs
tests/: axis_aligned.rs  bresenham.rs  clip.rs  diagonal.rs  octant.rs  orthogonal.rs  proptests.rs
