[package]
name = "clipline"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Nurzhan Saken <nurzhan.sakenov@gmail.com>"]
description = "Line segment rasterization with pixel-perfect clipping."
keywords = ["gamedev", "graphics", "geometry", "iterator", "pixels"]
categories = ["graphics", "rendering", "game-development", "embedded", "algorithms"]
repository = "https://github.com/nxsaken/clipline/"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
]

[dev-dependencies]
proptest = "1.7.0"
paste = "1.0.15"
rand = "0.9.2"

[profile.test]
opt-level = 3
overflow-checks = true
debug-assertions = true

[[bench]]
name = "main"
harness = false
